# game.libretro.snes9x2002

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/snes9x2002/: CMakeLists.txt  snes9x2002.txt
game.libretro.snes9x2002/: addon.xml.in
game.libretro.snes9x2002/resources/: settings.xml
game.libretro.snes9x2002/resources/language/resource.language.af_za/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.am_et/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.ar_dz/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.ar_sa/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.ast_es/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.az_az/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.be_by/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.bg_bg/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.bs_ba/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.ca_es/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.cs_cz/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.cy_gb/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.da_dk/: strings.po
game.libretro.snes9x2002/resources/language/resource.language.de_de/: strings.po
(+77 files in other folders)
